# toguz_korgool

./: .gitignore  CMakeLists.txt  CMakeLists_for_mongodb.txt  LICENSE  README.md
frontend/css/: style.css
frontend/templates/: login.html  registration.html  reset.html  reset_password.html
http-server/: CMakeLists.txt
http-server/include/: email_sender.hpp  jwt_manager.hpp  load_env.hpp  match_maker.hpp  token_generator.hpp
http-server/src/: .main.cpp.swp  a.out  bimap.hpp  echo_server_coro.cpp  epoll.cpp  main.cpp  send_email.cpp  simple_server_coro.cpp  socket_server.cpp  thread_pause.cpp
http-server/src/modified/: protocol.json  simple_coro_server.cpp  test_improved_server.py  test_json_client.py  test_json_client_simple.py
include/: mongodbclient.hpp  timer.h
include/core/: Board.cpp  Board.h  Game.h  a.out  game_manager.cpp  game_manager2.cpp  game_manager_tuz.cpp
include/core/statistics/: fixed_game_manager.cpp  game_manager_ring_full_statistics_strategy.cpp  game_manager_ring_tuz_full_statistics_distributions.cpp  game_manager_ring_tuz_statistics.cpp  game_manager_ring_with_addons.cpp  game_manager_ring_working.cpp  game_manager_ringfull_statistics_hash_probability.cpp  game_manager_rules.cpp
include/utils/: clock.h  date.h
oauth2/: CMakeLists.txt  main.cpp
src/: main.cpp
